improv: get version file from go.mod

--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -31,8 +31,8 @@ jobs:
             - name: Set up Go
               uses: actions/setup-go@v5
               with:
-                # go-version: /go.mod # read version from go.mod file
-                go-version: 1.22.4
+                #go-version: 1.22.4
+                go-version-file: go.mod # read version from go.mod file
             
             - name: golangci-lint
               uses: golangci/golangci-lint-action@v6
