--- a/.github/workflows/ci-pipeline.yaml
+++ b/.github/workflows/ci-pipeline.yaml
@@ -21,6 +21,7 @@ concurrency:
 
 jobs:
     lint:
+        name: Linter
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
